<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="live_bet_reserve_expired">预约失效</string>
    <string name="live_bet_grounder">滚球</string>
    <string name="live_bet_on">投注</string>
    <string name="live_bet_on_remaining">剩余投注额</string>
    <string name="live_bet_bet_num">注单号</string>
    <string name="live_bet_rejection">拒单</string>
    <string name="live_bet_reserve_odds">预约赔率</string>
    <string name="live_bet_reserve_bet">预约投注</string>
    <string name="live_bet_cross_border">串关方式</string>
    <string name="live_bet_except_max_win">预计最高可赢</string>
    <string name="live_bet_except_win">预计可赢</string>
    <string name="live_bet_reserve_win">预约可赢</string>
    <string name="live_bet_cancel_reserve">取消预约</string>
    <string name="live_bet_modify_odds">修改赔率</string>
    <string name="live_bet_odds">赔率</string>
    <string name="live_bet_part_early_settle">部分提前结算</string>
    <string name="live_bet_win_lose_amount">输赢金额</string>
    <string name="live_bet_win">赢</string>
    <string name="live_bet_except_odds">预计赔率 @%1$s</string>
    <string name="live_bet_early_settle">提前结算</string>
    <string name="see_more">查看更多</string>
    <string name="fold_up">向上收起</string>
    <string name="cancel">取消</string>
    <string name="refund_amount">返还金额%1$s%2$s</string>
    <string name="want_settle_early">确定提前结算吗?</string>
    <string name="capital">本金</string>
    <string-array name="keyboard_percent">
        <item>全部</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>
    <string name="live_betslip_bettips">如果部分已提前结算，金额则为剩余投注额</string>
    <string name="auto_bet_odds_reached">达到此赔率时自动投注</string>
    <string name="confirm">确定</string>
    <string name="unsettled">未结算</string>
    <string name="win">赢</string>
    <string name="tie">和局</string>
    <string name="lose">输</string>
    <string name="lose_half">输一半</string>
    <string name="win_half">赢一半</string>
    <string name="return_money">已返还</string>
    <string name="not_support_early_settle">该订单暂不支持提前结算</string>
    <string name="network_abnormal">网络异常，请稍后重试</string>
    <string name="early_settle_success">提前结算成功</string>
    <string name="early_settle_faile">提前结算失败</string>
    <string name="keyboard_max">最高</string>
    <string name="keyboard_clear">清空</string>
    <string name="keyboard_double">双倍</string>
    <string name="btn_cancel">取消</string>
    <string name="lineup_empty">暂无数据，请换个试一试~</string>
    <string name="betslip_list_empty">暂无订单</string>

    <string name="cancel_reserve_success">取消预约成功</string>
    <string name="cancel_reserve_fail">取消预约失败</string>
    <string name="modify_odds_success">修改赔率成功</string>
    <string name="modify_odds_fail">修改赔率失败</string>
    <string name="confirm_cancel_reserve">确定取消预约?</string>
    <string name="cancel_reserve">取消预约</string>
    <string name="modify_reserve">修改预约赔率</string>
    <string name="not_yet">暂不</string>

    <string name="date_picker_title">选择开始日期</string>
    <string name="date_picker_all">全部</string>
    <string name="date_picker_today">今天</string>
    <string name="date_picker_yesterday">昨天</string>
    <string name="date_picker_in_7_day">7天内</string>
    <string name="date_picker_custom">自定义</string>

    <string name="date_picker_year">%d年</string>
    <string name="date_picker_month">%d月</string>
    <string name="date_picker_day">%d日</string>
    <string name="date_picker_date_before">%s及以前</string>
    <string name="sport_picker_all">全部</string>
    <string name="sport_picker_title">选择体育类型</string>
    <string name="sport_picker_reset">重置</string>
    <string name="btn_confirm">确定</string>
    <string name="refund_amount_include_principal">返还金额包含本金</string>
    <string name="live_bet_in_early_settle">提前结算中</string>
    <string name="hint_less_amount_early_settle">小于最小投注额，无法部分提前结算</string>
    <string name="title_combo_bet_odds">%d串%d</string>

    <string name="title_order_game">游戏</string>
    <string name="title_order_sport">体育</string>

    <string name="title_order_sport_settled">已结算</string>
    <string name="title_order_sport_reserve">预约</string>
    <string name="title_order_sport_filter">筛选</string>

    <string name="title_order_sport_live">直播中</string>
    <string name="title_bet">投注</string>
    <string name="title_odds">赔率</string>
    <string name="title_multiple">最大倍数</string>
    <string name="title_bonus">最大奖金</string>
    <string name="tip_multiple">仅显示30天内的注单, 按中奖倍数从大到小排序</string>
    <string name="tip_bonus">仅显示30天内的注单, 按中奖金额从大到小排序</string>

    <string name="title_sport_filter">选择筛选项</string>
    <string name="title_sport_filter_type">体育类型</string>
    <string name="title_game_filter_type">游戏类型</string>
    <string name="btn_sport_filter_confirm">查看最新结果</string>


    <string name="title_order_sport_header_betting_amount">投注 %s</string>
    <string name="title_order_sport_header_valid_betting_amount">有效投注 %s</string>

    <string name="title_order_sport_expand">展开%d个盘口</string>
    <string name="title_order_sport_collapse">收起</string>
    <string name="title_order_sport_early_settle">确定提前结算吗?</string>
    <string name="title_order_sport_early_settle_confirm">确定结算</string>


    <string name="menu_all">全部</string>
    <string name="menu_win">赢钱</string>
    <string name="menu_one">赢钱(1.5x)</string>
    <string name="menu_ten">赢钱(10x)</string>

    <string name="menu_all_bet">全部注单</string>
    <string name="menu_win_bet">赢钱注单</string>
    <string name="menu_one_bet">赢钱倍数 ≥ 1.5x</string>
    <string name="menu_ten_bet">赢钱倍数 ≥ 10x</string>

    <string name="title_order_date_selector">日期选择</string>
    <string name="title_order_date_custom">自定义</string>

    <string name="title_order_betting_time">注单时间</string>
    <string name="title_order_betting_yesterday">昨天</string>
    <string name="title_order_betting_last_week">上周</string>
    <string name="title_order_betting_last_month">上月</string>
    <string name="title_order_betting_custom_time">自定义时间</string>
    <string name="title_order_betting_return_error">结束日期不能早于开始日期</string>

    <string name="order_lose_half">½ 输</string>
    <string name="order_win_half">½ 赢</string>
    <string name="order_win_and_lose_half">½ 平</string>
    <string name="order_no_data">没有符合条件的注单</string>
    <string name="order_choose_time">选择时间</string>
</resources>
