<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_share">

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_sport_filter"
        android:textColor="@color/color_FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:skinnableFontWeight="500" />

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_game_filter_type"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:skinnableFontWeight="500" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="11dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        tools:listitem="@layout/item_sport"
        app:spanCount="4"
        tools:itemCount="12" />

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/bg_money_circle"
        android:backgroundTint="@color/color_003A42"
        android:gravity="center"
        android:paddingVertical="14dp"
        android:text="@string/sport_picker_reset"
        android:textColor="@color/color_00E0E5"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_content"
        app:skinnableFontWeight="500" />

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_money_circle"
        android:backgroundTint="@color/color_00A7C0"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_reset"
        app:layout_constraintTop_toTopOf="@id/btn_reset" />
</androidx.constraintlayout.widget.ConstraintLayout>