<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_base_bottom_sheet_dialog"
    android:backgroundTint="@color/card_background">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="11dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/press_dialog_button"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="11dp"
        android:text="@string/btn_confirm"
        android:textColor="@color/press_dialog_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.5dp"
        android:text="@string/date_picker_title"
        android:textColor="@color/secondary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/tv_confirm"
        app:layout_constraintStart_toEndOf="@id/tv_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="34dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel"
        app:spanCount="3"
        tools:itemCount="5"
        tools:listitem="@layout/item_date" />

</arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>