<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_bg">

    <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
        android:id="@+id/cl_top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/cl_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_all"
                android:textColor="@color/selector_tab_type"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableImageView
                android:id="@+id/iv_all_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_2"
                android:background="@drawable/selector_tab_all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_all"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_multiple"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_97"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_10"
            android:text="@string/title_multiple"
            android:textColor="@color/selector_tab_type"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_bonus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_98"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_10"
            android:text="@string/title_bonus"
            android:textColor="@color/selector_tab_type"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/cl_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_order_sport_filter"
                android:textColor="@color/color_C0C0C0"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_3"
                android:src="@drawable/icon_order_sport_filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_filter"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
    </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_1E1E1E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_title" />

    <arch.cayenne.lib.skin.widget.SkinnableView
        android:id="@+id/ll_drop_mask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="#BF000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_title" />

    <FrameLayout
        android:id="@+id/ll_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_title" />
</arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>